--- a/index.css
+++ b/index.css
@@ -307,7 +307,9 @@ p {
     height: 250px;
     justify-content: left;
     margin-left: 6%;
-    border-radius: 10%;
+    border-radius: 1%;
+    object-fit: contain;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     top: 50%;
 }
 
